# Barcode_Generator_Python

./: .gitignore  main.py  pyproject.toml  readme.md
src/barcodegen/: __main__.py
tests/: test_main.py
